# Mumble-AI

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mumble_bot/: __init__.py  _ssl_compat.py  audio.py  buffer.py  commands.py  config.py  controller.py  db.py  identity.py  logbuffer.py  main.py  mumble_client.py  orchestrator.py  privacy.py  proactive.py  speaker.py  timers.py  wake.py
mumble_bot/llm/: base.py  deepseek.py  factory.py  failover.py  gemini.py  openai_compat.py
mumble_bot/skills/: base.py  music_skill.py  mute_ears_skill.py  registry.py  timer_skill.py
mumble_bot/stt/: base.py  dashscope_paraformer.py  manager.py
mumble_bot/tts/: base.py  fish_s2.py
mumble_bot/web/: index.html  server.py
tests/: test_audio_resample.py  test_buffer.py  test_commands.py  test_config.py  test_controller.py  test_failover.py  test_identity.py  test_logbuffer.py  test_orchestrator.py  test_orchestrator_agentic.py  test_proactive.py  test_skills.py  test_ssl_compat.py  test_stt_endpoint.py  test_stt_manager.py  test_timers.py  test_tts_fish.py  test_wake.py  test_web.py
